--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,9 @@
   </form>
 
   <div class="conteiner gallery">
-  <ul class="gallery-cards"></ul>
+    <ul class="gallery-cards">
+      
+    </ul>
   </div>
 
   <script type="module" src="./main.js"></script>
