--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
     <button type="submit" class="button">Search</button>
   </form>
 
+  <span class="loader"></span>
+
   <div class="conteiner gallery-conteiner">
     <ul class="gallery-cards">
       
