--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
     <button type="submit" class="button">Search</button>
   </form>
 
-  <span class="loader"></span>
+  <div class="loader-container">
+    <div class="loader"></div>
+</div>
 
   <div class="conteiner gallery-conteiner">
     <ul class="gallery-cards">
