--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <form class="form">
-    <input tupe="text" class="text-form" name="query" placeholder="Search images..."/>
+    <input type="text" class="text-form" name="query" placeholder="Search images..."/>
     <button type="submit" class="button">Search</button>
   </form>
 
