--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
   </div>
 
   <script type="module" src="./main.js"></script>
+  <script type="module" src="./js/refs.js"></script>
   <script type="module" src="./js/pixabay-api.js"></script>
   <script type="module" src="./js/render-functions.js"></script>
 </body>
